# stackify

./: Cargo.toml  README.md  justfile
assets/: Dockerfile  Dockerfile.build
crates/stackify-cli/: Cargo.toml
crates/stackify-cli/assets/: Dockerfile.build  Dockerfile.runtime  Dockerfile.stacks-cli  README.md  bitcoin-entrypoint.sh  bitcoin.conf.hbs  build-entrypoint.sh  build-setup.sh  cargo-config.toml  stacks-node-entrypoint.sh  stacks-node.toml.hbs  stacks-signer-entrypoint.sh  stacks-signer.toml.hbs
crates/stackify-cli/migrations/2024-03-20-162404_initial/: up.sql
crates/stackify-cli/src/: cli.rs  context.rs  errors.rs  includes.rs  main.rs  util.rs
crates/stackify-cli/src/cli/: build.rs  clap_color_flag.rs  clap_verbosity_flag.rs  clean.rs  config.rs  context.rs  info.rs  init.rs  log.rs  theme.rs  uninstall.rs
crates/stackify-cli/src/cli/config/: args.rs  epochs.rs  mod.rs  services.rs
crates/stackify-cli/src/cli/env/: args.rs  build.rs  contract.rs  down.rs  epoch.rs  keychain.rs  list.rs  mod.rs  service.rs  service_add.rs  start.rs  stop.rs
crates/stackify-cli/src/cli/env/service/: add.rs  config.rs  list.rs  publish.rs  remove.rs
crates/stackify-cli/src/cli/init/: assets.rs  db.rs  docker.rs  downloads.rs  mod.rs
crates/stackify-cli/src/cli/install/: assets.rs  db.rs  docker.rs  mod.rs
crates/stackify-cli/src/db/: cli_db.rs  errors.rs  mod.rs  model.rs  opts.rs  schema.rs
crates/stackify-cli/src/db/diesel/: mod.rs  model.rs  model_ext.rs  schema.rs
crates/stackify-cli/src/db/tests/: mod.rs
crates/stackify-cli/src/docker/: api.rs  mod.rs  opts.rs
crates/stackify-cli/src/util/: git.rs  mod.rs  names.rs  print.rs  progressbar.rs  stacks_cli.rs
crates/stackify-common/: Cargo.toml
crates/stackify-common/src/: cli_db.rs  download.rs  lib.rs  types.rs  util.rs
crates/stackify-common/src/api/: models.rs
crates/stackify-common/src/bitcoin/: mod.rs  opcodes.rs  script.rs
crates/stackify-common/src/db/: mod.rs  model.rs  schema.rs
crates/stackify-common/src/docker/: containers.rs  files.rs  images.rs  mod.rs  networks.rs  stackify_docker.rs  util.rs
crates/stackify-common/src/docker/tests/: docker_tests.rs  mod.rs
crates/stackify-common/src/stacks/: mod.rs
crates/stackify-common/src/stacks/api/: clarity.rs  errors.rs  hash.rs  hash20.rs  mod.rs  transactions.rs
crates/stackify-common/src/stacks/api/tests/: mod.rs  serialization.rs  v2.rs
crates/stackify-daemon/: Cargo.toml
crates/stackify-daemon/src/: api.rs  errors.rs  main.rs  models.rs
crates/stackify-daemon/src/control/: bitcoin.rs  mod.rs  models.rs  stacks_node.rs  stacks_signer.rs  stacks_stacker.rs
crates/stackify-daemon/src/db/: mod.rs  model.rs  schema.rs
crates/stackify-lib/: Cargo.toml
migrations/2024-03-20-162404_initial/: up.sql
