[workspace]
resolver = "2"
package.authors = ["Cyle Witruk <cyle@witruk.me>"]
package.homepage = "https://github.com/cylewitruk/stackify"
package.repository = "https://github.com/cylewitruk/stackify"
package.keywords = ["stacks", "stackify", "cli"]
package.edition = "2021"
package.license = "MIT"
package.version = "0.1.0"
members = [
    "crates/stackify-cli",
    "crates/stackify-common", 
    "crates/stackify-daemon", 
    "crates/stackify-lib"
]

[workspace.dependencies]
# Util
rand = { version = "0.8.5" }
signal-hook = { version = "0.3.17" }
tempfile = "3.12.0"
pathdiff = "0.2.1"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
libc = "0.2.155"
home = "0.5.9"
regex = "1.10.6"
hex = "0.4.3"
# Compression/Archiving
flate2 = "1.0.31"
tar = "0.4.41"
# Logging
env_logger = "0.11.5"
log = "0.4.22"
tracing = "0.1.37"
tracing-subscriber = "0.3"
# CLI
clap = { version = "4.5.13", features = ["default", "derive", "wrap_help"] }
clap_complete = "4.5.12"
shellwords = "1.1.0"
anstyle = "1.0.8"
cliclack = "0.3.2"
# Async
tokio = { version = "1.39.2", features = ["full"] }
futures-util = "0.3.30"
tokio-util = "0.7.11"
# Docker
#bollard = { version ="0.16.1", features = ["ssl", "time", "buildkit"] }
# Error handling
thiserror = { version = "1.0.63" }
color-eyre = { version = "0.6.3" }
# Database
diesel = { version = "2.2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time"] }
diesel_migrations = { version = "2.2.0" }
# Console/terminal libraries
console = { version = "0.15.8" }
comfy-table = { version = "7.1.1", features = ["custom_styling"] }
# Network/Http
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
# Serialization
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.125"
# Crypto
libsecp256k1 = "0.7.1"

# Local deps
stackify-common = { path = "crates/stackify-common" }
#stackify-common = "0.1.0"

[profile.release]
lto = true
opt-level = 3