[package]
name = "stackify-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stackify"
path = "src/main.rs"

[dependencies]
# Util
rand = { workspace = true }
time  = { workspace = true }
libc = { workspace = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
home = { workspace = true }
dyn-fmt = "0.4.0"
regex = { workspace = true }
lazy_static = { workspace = true }
convert_case = "0.6.0"
handlebars = "5.1.2"
rust-embed="8.3.0"

# Error Handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# Docker
bollard = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Console/Terminal/CLI
console = { workspace = true }
shellwords = { workspace = true }
colorchoice = "1.0.0"
textwrap = "0.16.1"
scrawl = "2.0.0"
### Clap
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_command = "0.5.1"
clap-markdown = "0.1.3"
### Colors
anstyle = { workspace = true }
owo-colors = "4.0.0"
anstyle-owo-colors = "2.0.0"
### UI
prettytable-rs = "^0.10"
comfy-table = { workspace = true }
inquire = { version = "0.7.3", features = ["editor", "macros"] }
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
#cliclack = "0.1.13"
cliclack = { git = "https://github.com/cylewitruk/cliclack.git", branch = "stackify"}
docker-api = "0.14"

# Database
diesel = { workspace = true }
diesel_migrations = { workspace = true }

# Local deps
stackify-common = { path = "../stackify-common" }

# Compression/Archiving
flate2 = { workspace = true }
tar = { workspace = true }