[package]
name = "stackify-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stackify"
path = "src/main.rs"

[dependencies]
# Util
rand = { workspace = true }
time  = { workspace = true }
libc = { workspace = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
home = { workspace = true }
dyn-fmt = "0.4.0"
regex = { workspace = true }
lazy_static = { workspace = true }
convert_case = "0.6.0"
handlebars = "5.1.2"
rust-embed="8.3.0"
once_cell = "1.18.0"
rayon = "1.10.0"

# Serialization
serde_json = "1.0.115"

# Error Handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = "0.7.10"
futures-util = { workspace = true }

# Docker
docker-api = { git = "https://github.com/cylewitruk/docker-api-rs.git", branch = "feat/image-build-args", features = ["tls", "par-compress"], default-features = false }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Console/Terminal/CLI
console = { workspace = true }
shellwords = { workspace = true }
colorchoice = "1.0.0"
textwrap = "0.16.1"
scrawl = "2.0.0"
### Clap
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_command = "0.5.1"
clap-markdown = "0.1.3"
### Colors
anstyle = { workspace = true }
owo-colors = "4.0.0"
anstyle-owo-colors = "2.0.0"
### UI
prettytable-rs = "^0.10"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
cliclack = { git = "https://github.com/fadeevab/cliclack.git", branch = "main" }

# Database
diesel = { workspace = true }
diesel_migrations = { workspace = true }

# Local deps
stackify-common = { path = "../stackify-common" }

# Compression/Archiving
flate2 = { workspace = true }
tar = { workspace = true }