[package]
name = "stackify"

version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

publish = true

[[bin]]
name = "stackify"
path = "src/main.rs"

[dependencies]
# Util
rand = { workspace = true }
time  = { workspace = true }
libc = { workspace = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
home = { workspace = true }
dyn-fmt = "0.4.0"
regex = { workspace = true }
convert_case = "0.6.0"
handlebars = "6.0.0"
rust-embed="8.5.0"
once_cell = "1.19.0"
rayon = "1.10.0"

# Serialization
serde = "1.0.204"
serde_json = "1.0.122"

# Error Handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# Docker
stackify-docker-api = { version = "0.15.0", features = ["tls", "par-compress"], default-features = false }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Github
octocrate = { version = "2.0.1", features = ["default", "repos", "pagination"] }

# Console/Terminal/CLI
console = { workspace = true }
shellwords = { workspace = true }
colorchoice = "1.0.2"
textwrap = "0.16.1"
scrawl = "2.0.0"
### Clap
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_command = "0.6.1"
clap-markdown = "0.1.4"
### Colors
anstyle = { workspace = true }
owo-colors = "4.0.0"
anstyle-owo-colors = "2.0.2"
### UI
prettytable-rs = "^0.10"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
cliclack = { workspace = true }

# Database
diesel = { workspace = true }
diesel_migrations = { workspace = true }

# Local deps
stackify-common = { path = "../stackify-common" }

# Compression/Archiving
flate2 = { workspace = true }
tar = { workspace = true }
