[package]
name = "stackify-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
bytes = "1.5.0"
flate2 = { workspace = true }
reqwest = { workspace = true }
docker-api = "0.14"

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"