[package]
name = "stackify-common"
description = "Common utilities for the Stackify project"

version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bollard = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
bytes = "1.5.0"
flate2 = { workspace = true }
reqwest = { workspace = true }
docker-api = "0.14"
serde.workspace = true
serde_json.workspace = true
libsecp256k1.workspace = true
serde-big-array = "0.5.1"
curve25519-dalek = "4.1.3"
ripemd = "0.1.3"
sha2 = "0.10.8"
tokio = { workspace = true }
futures-util = { workspace = true }