[package]
name = "stackify-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stackifyd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bitcoin
bitcoincore-rpc = "0.18.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web
rocket = "0.5.0"
okapi = "0.7.0"
reqwest = { workspace = true }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "secrets"] }

# Error Handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }