[package]
name = "stackifyd"

version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "stackifyd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Util
time  = { workspace = true }
home = { workspace = true }

# Bitcoin
bitcoincore-rpc = "0.19.0"

# Async
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { workspace = true }
diesel_migrations = { workspace = true }

# Web
rocket = "0.5.0"
okapi = "0.7.0"
reqwest = { workspace = true }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "secrets"] }

# Network
libp2p = { workspace = true, features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "ping"] }

# Error Handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local
stackify-common = { path = "../stackify-common" }